# kicad-mcp-pro

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  commitlint.config.cjs  docker-entrypoint.sh  index.html  mcp.json  mkdocs.yml  objects.inv  package.json  pyproject.toml  server.json  sitemap.xml  uv.toml  whitelist.py
.azure/pipelines/: azure-pipelines.yml  ci.yml  publish.yml  security.yml
.github/: CODEOWNERS  FUNDING.yml  actionlint.yaml  dependabot.yml  labeler.yml
.github/workflows/: actions-maintenance.yml  ci.yml  codeql.yml  commitlint.yml  dependabot-auto-merge.yml  docker-publish.yml  docs.yml  homebrew-publish.yml  jules-ci-fixer.yml  jules-dependency-fixer.yml  jules-issue-agent.yml  jules-manual.yml  kicad-cli-smoke.yml  lint-fast.yml  mcp-registry.yml  mirror-personal.yml  mutation.yml  release-controller.yml  release-please.yml  release.yml  review-thread-gate.yml  scoop-publish.yml  scorecard.yml  security.yml  stale.yml  static-analysis.yml  trivy.yml
.semgrep/: kicad-mcp-policy.yml
adr/: index.html
adr/0001-repository-topology/: index.html
adr/0002-version-single-source/: index.html
api-stability/: index.html
autonomy/: index.html
branch-protection/: index.html
client-configuration/: index.html
comparison/: index.html
configuration/: index.html
demo-media/: index.html
deployment/azure-devops/: index.html
deployment/docker/: index.html
deployment/http-mode/: index.html
deployment/jules-ci-bridge/: index.html
deployment/repository-topology/: index.html
deployment/security/: index.html
development/: index.html
development/architecture/: index.html
development/contributing/: index.html
development/contributing-fixtures/: index.html
development/principles/: index.html
development/roadmap-2026/: index.html
development/v2-migration/: index.html
docs/: autonomy.md  branch-protection.md  development.md  doppler-setup.md  index.md  publishing.md  release-process.md  release-state-machine.md  repository-apps.md  repository-operations.md  testing.md  workflow-security.md
docs/adr/: 0001-repository-topology.md
docs/automation/: failure-classifier.md  jules.md  mirror-personal.md  release-controller.md  review-thread-gate.md
docs/deployment/: azure-devops.md  docker.md  jules-ci-bridge.md  repository-topology.md
docs/development/: principles.md
docs/install/: client-config-generator.md  docker.md
docs/integration/: kicad-studio.md
docs/security/: marketplace-app-policy.md  release-integrity.md
docs/status/: runtime-matrix.md
docs/workflows/: high-speed-review.md  schematic-to-pcb.md
doppler-setup/: index.html
examples/clients/: claude-code.mcp.json  codex-config.toml  codex-http-config.toml  cursor.mcp.json  gemini-http-settings.json  gemini-settings.json  vscode-http.mcp.json  vscode.mcp.json
faq/: index.html
installation/: index.html
integration/claude-code/: index.html
maintenance-policy/: index.html
npm-wrapper/: README.md  package.json
release-process/: index.html
repository-apps/: index.html
repository-operations/: index.html
rfcs/: index.html
runtime-matrix/: index.html
scripts/: bump_version.py  check-review-threads.mjs  check_release_preflight.py  classify-gh-failure.mjs  publish.sh  publish_mcp_registry.py  release-state.mjs  repo-cleanup.sh  static_analysis_gate.py  sync_mcp_metadata.py  validate_mcp_manifest.py  verify_doppler_secrets.ps1  verify_doppler_secrets.sh
search/: search_index.json
tests/: conftest.py
tools-reference/: index.html
troubleshooting/: index.html
workflow-security/: index.html
(+72 files in other folders)
