[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kicad-mcp-pro"
version = "3.2.1"
description = "A Model Context Protocol server for KiCad EDA workflows."
readme = "README.md"
license = { text = "MIT" }
license-files = []
authors = [{ name = "Osman Aslan" }]
keywords = [
  "kicad",
  "mcp",
  "pcb",
  "eda",
  "ai",
  "llm",
  "schematic",
  "pcb-design",
  "eda-automation",
  "gerber-export",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
  "authlib>=1.6.11",
  "anyio>=4.4.0",
  "kicad-sch-api>=0.5.0,<0.6",
  "kicad-python>=0.6,<0.8",
  "mcp[cli]>=1.23.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "rich>=13.7.0",
  "structlog>=24.2.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
components = ["gql>=3.5.0", "httpx>=0.27.0"]
dev = [
  "bandit>=1.7.9",
  "hypothesis>=6.100.0",
  "mkdocs-material>=9.5.32",
  "mkdocs-git-revision-date-localized-plugin>=1.2.9",
  "mkdocs-glightbox>=0.4.0",
  "mkdocs-minify-plugin>=0.8.0",
  "mkdocs-redirects>=1.2.1",
  "mkdocstrings[python]>=0.25.0",
  "mutmut>=3.0.0",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-benchmark>=4.0.0",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "pytest-testmon>=2.1.1",
  "pytest-xdist>=3.6.0",
  "pyright>=1.1.390",
  "radon>=6.0.1",
  "ruff>=0.4.0",
  "safety>=3.2.0",
  "vulture>=2.11",
  "zizmor>=1.24.1",
]
freerouting = ["docker>=7.0.0"]
http = ["httpx>=0.27.0", "uvicorn[standard]>=0.30.0"]
simulation = ["numpy>=1.26.0"]
vcs = [
    "gitpython>=3.1.49,<4.0.0",
]

[project.scripts]
kicad-mcp-pro = "kicad_mcp.server:main"

[project.urls]
Homepage = "https://github.com/oaslananka/kicad-mcp-pro"
Documentation = "https://oaslananka-lab.github.io/kicad-mcp-pro"
Repository = "https://github.com/oaslananka-lab/kicad-mcp-pro"
"Bug Tracker" = "https://github.com/oaslananka-lab/kicad-mcp-pro/issues"
Changelog = "https://github.com/oaslananka-lab/kicad-mcp-pro/blob/main/CHANGELOG.md"
Funding = "https://github.com/sponsors/oaslananka"

[tool.hatch.build.targets.wheel]
packages = ["src/kicad_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/kicad_mcp", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "S", "ANN"]
ignore = ["S603"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN001", "ANN202", "S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "benchmark: lightweight performance regression checks with committed baselines",
  "slow: tests that are useful for scheduled/full validation but skipped by fast loops",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-module = false
ignore-nested-functions = true
ignore-private = true
fail-under = 43.3
verbose = 1

[tool.coverage.run]
source = ["src/kicad_mcp"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 90
